--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,9 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
-
+plugins {
+    id "org.sonarqube" version "2.7"
+}
 allprojects {
     repositories {
         google()
